Fixed button mobile bug
Added auto height on mobiel version so the button ihas enough space to be below the other elements.

--- a/Project/dashboard/src/style.css
+++ b/Project/dashboard/src/style.css
@@ -671,6 +671,7 @@ footer a:hover {
     }
     #choicesDiv {
         flex-direction: column !important;
+        height: auto !important;
     }
     .forlistbutton {
         width: 80%;
